Complete Trading Dashboard System with Full Documentation
## Summary

Consolidated complete algorithmic trading system with interactive real-time dashboard.
All individual documentation files consolidated into single comprehensive README.md.

## Changes Made

### 1. Dashboard Backend (Go - cmd/dashboard/)
- main.go (409 lines) - HTTP server with 5 REST endpoints
- response.go (87 lines) - TypeScript-compatible response types
- websocket.go (204 lines) - WebSocket streaming with heartbeat

### 2. Dashboard Backend Internal Packages (Go - internal/dashboard/)
- broadcaster.go (134 lines) - Multi-client WebSocket hub
- events.go (138 lines) - PostgreSQL LISTEN/NOTIFY event listener

### 3. Dashboard Frontend (React/TypeScript - web/)
- app/layout.tsx - Root layout with header, main, footer
- app/page.tsx - Home page with 3 cards
- app/dashboard/page.tsx (280+ lines) - Complete dashboard with real-time updates
- app/docs/page.tsx (600+ lines) - Interactive documentation with 13 sections
- hooks/useAPI.ts (60 lines) - REST API fetching hook
- hooks/useWebSocket.ts (115 lines) - WebSocket connection with auto-reconnect
- hooks/useMetrics.ts (80 lines) - Combined REST + WebSocket metrics
- types/api.ts (70 lines) - TypeScript interfaces for API responses
- utils/formatting.ts (60 lines) - Currency, date, number formatting
- utils/constants.ts (30 lines) - API URLs and configuration
- styles/globals.css (120 lines) - Tailwind CSS with custom animations
- package.json, tsconfig.json, next.config.ts, postcss.config.mjs

### 4. Documentation Consolidation
- Removed 28 individual .md files (~100KB total):
  * BACKTEST_CAPITAL_USAGE.md
  * BACKTEST_EXAMPLE_OUTPUT.md
  * BEFORE_OFFICE_CHECKLIST.md
  * BUG_REPORT_ZERO_PNL.md
  * CAPITAL_TRACKING_README.md
  * CAPITAL_USAGE_QUICK_REF.md
  * CAPITAL_USAGE_SUMMARY.md
  * CAPITAL_USAGE_VISUAL_GUIDE.md
  * DASHBOARD_API.md
  * DASHBOARD_ARCHITECTURE.md
  * DASHBOARD_COMPLETE_GUIDE.md
  * DASHBOARD_IMPLEMENTATION_SUMMARY.md
  * DASHBOAR

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# ============================================================================
 # Go
+# ============================================================================
 /bin/
 *.exe
 *.exe~
@@ -8,11 +10,30 @@
 *.test
 *.out
 
+# Compiled binary (keep source code, ignore binaries)
+/dashboard
+/cmd/dashboard/dashboard
+
+# ============================================================================
+# Node.js / Frontend (Next.js)
+# ============================================================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.next/
+out/
+build/
+dist/
+.vercel/
+
+# ============================================================================
 # Python
+# ============================================================================
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
 .Python
 env/
 venv/
@@ -22,33 +43,89 @@ venv/
 dist/
 build/
 
-# AI outputs (generated, not committed)
-/ai_outputs/
-
-# Market data (large files, not committed)
-/market_data/
-
-# Logs
-/logs/
-
-# IDE
+# ============================================================================
+# IDE / Editor
+# ============================================================================
 .idea/
 .vscode/
 *.swp
 *.swo
 *~
 .DS_Store
+.history/
+*.sublime-workspace
+*.sublime-project
 
-# Environment / secrets
+# ============================================================================
+# Environment / Secrets (NEVER COMMIT)
+# ============================================================================
 .env
 .env.local
+.env.*.local
 *.pem
 *.key
 credentials.json
+secrets.json
+api-keys.txt
 
-# Config with secrets (use config.json.example as template)
+# ============================================================================
+# Configuration with secrets
+# ============================================================================
 config/config.json
+config/*.json
+!config/config.json.example
 
-# Database
+# ============================================================================
+# Database files
+# ============================================================================
 *.db
 *.sqlite
+*.sqlite3
+
+# ============================================================================
+# AI outputs (generated, not committed)
+# ============================================================================
+/ai_outputs/
+
+# ============================================================================
+# Market data (large files, not committed)
+# ============================================================================
+/market_data/
+
+# ============================================================================
+# Logs
+# ============================================================================
+/logs/
+*.log
+*.log.*
+
+# ============================================================================
+# OS files
+# ============================================================================
+.DS_Store
+Thumbs.db
+.gitkeep
+
+# ============================================================================
+# IDE temp files
+# ============================================================================
+*.bak
+*.tmp
+*~
+.~*
+
+# ============================================================================
+# Build artifacts
+# ============================================================================
+.turbopack/
+.next/
+dist/
+build/
+out/
+
+# ============================================================================
+# Cache files
+# ============================================================================
+.cache/
+.eslintcache
+.node_repl_history
